[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/easy_charts/LineChart/line_chart.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/charts/trailer_tyre_pressure_chart_detailed.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/charts/charts.gd" type="Script" id=3]
[ext_resource path="res://ui/charts/weight_chart_detailed.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/charts/truck_tyre_pressure_chart_detailed.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/charts/truck_brake_pads_chart_detailed.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/charts/truck_wheel_bearing_temp_chart_detailed.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/charts/chart_tab_container_theme.tres" type="Theme" id=9]
[ext_resource path="res://ui/charts/trailer_brake_pads_chart_detailed.tscn" type="PackedScene" id=10]

[node name="Charts" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ChartsGrid" type="GridContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
columns = 2

[node name="WeightChart" parent="MarginContainer/ChartsGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
chart_name = "Avg Trailer Weight (kg) / Time"
Chart_Display/max_y_range = 1000.0
Chart_Display/y_decim = 100.0
Chart_Style/function_colors = [ Color( 0, 0, 0, 1 ) ]

[node name="TyrePressureChart" parent="MarginContainer/ChartsGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
chart_name = "Avg Tyre Pressure (psi) / Time"
Chart_Display/max_y_range = 120.0
Chart_Display/y_decim = 20.0
Chart_Style/function_colors = [ Color( 0, 0, 0, 1 ) ]

[node name="TruckWheelBearingTempChart" parent="MarginContainer/ChartsGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 292.0
margin_right = 500.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
chart_name = "Avg Wheel Bearing Temp (°C) / Time"
Chart_Display/min_y_range = 10.0
Chart_Display/max_y_range = 60.0
Chart_Display/y_decim = 10.0
Chart_Style/function_colors = [ Color( 0, 0, 0, 1 ) ]

[node name="TruckBrakePadsChart" parent="MarginContainer/ChartsGrid" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 504.0
margin_top = 292.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
chart_name = "Avg Brake Wear (%) / Time"
Chart_Display/min_y_range = 50.0
Chart_Display/max_y_range = 100.0
Chart_Display/y_decim = 10.0
Chart_Style/function_colors = [ Color( 0, 0, 0, 1 ) ]

[node name="WeightTabContainer" type="TabContainer" parent="MarginContainer"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
theme = ExtResource( 9 )

[node name="Trailer Weight" parent="MarginContainer/WeightTabContainer" instance=ExtResource( 4 )]
margin_top = 28.0
margin_bottom = -5.0
chart_name = "Trailer Weight (kg) over Time"
units = " kg"

[node name="TyrePressureTabContainer" type="TabContainer" parent="MarginContainer"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
theme = ExtResource( 9 )

[node name="Truck Tyre Pressure" parent="MarginContainer/TyrePressureTabContainer" instance=ExtResource( 6 )]
margin_top = 28.0
margin_bottom = -5.0
chart_name = "Tyre Pressure (psi) over Time"

[node name="Trailer Tyre Pressure" parent="MarginContainer/TyrePressureTabContainer" instance=ExtResource( 2 )]
visible = false
margin_top = 28.0
margin_bottom = -5.0

[node name="WheelBearingTabContainer" type="TabContainer" parent="MarginContainer"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
theme = ExtResource( 9 )

[node name="Truck Wheel Bearing Temp" parent="MarginContainer/WheelBearingTabContainer" instance=ExtResource( 8 )]
margin_top = 28.0
margin_bottom = -5.0
chart_name = "Wheel Bearing Temp (°C) over Time"

[node name="BrakePadsTabContainer" type="TabContainer" parent="MarginContainer"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
theme = ExtResource( 9 )

[node name="Truck Brake Wear %" parent="MarginContainer/BrakePadsTabContainer" instance=ExtResource( 7 )]
margin_top = 28.0
margin_bottom = -5.0
chart_name = "Brake Wear (%) over Time"

[node name="Trailer Brake Wear %" parent="MarginContainer/BrakePadsTabContainer" instance=ExtResource( 10 )]
visible = false
margin_top = 28.0
margin_bottom = -5.0

[node name="BackButton" type="Button" parent="MarginContainer"]
margin_left = 990.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 34.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x"

[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
